fixed alignment in work container

--- a/css/homepage.scss
+++ b/css/homepage.scss
@@ -143,6 +143,8 @@ body {
 
 */
 
+// LOGO
+
 .home-page__header {
     display: flex;
     color: #3b99e0;
@@ -153,11 +155,12 @@ body {
     flex: 1 0 90%;
 }
 
+// START SCREEN
+
 .main-image {
     display: flex;
     flex: 3 1 70%;
 }
-
 
 .main-header {
     display: flex;
@@ -201,28 +204,8 @@ body {
     color: white;
 }
 
-.send-button {
-    display: flex;
-    justify-content: center;
-    border: 1px solid #3b99e0;
-    background-color: white;
-    color: #3b99e0;
-    font-size: 1.25rem;
-    letter-spacing: 1.5px;
-    border-radius: .3rem;
-    font-weight: 900;
-    text-transform: uppercase;
-    margin: 1rem 0;
-    width: 10rem;
-    cursor: pointer;
-}
-
-.send-button:hover {
-    background-color: #3b99e0;
-    color: white;
-}
-
 //HOME PAGE BOTTOM
+
 .home-page__bottom {
     display: flex;
     flex-direction: column;
@@ -255,6 +238,8 @@ body {
     text-align: center;
 }
 
+// SERVICES CONTAINER
+
 .services-container {
     display: flex;
     flex-direction: column;
@@ -266,7 +251,6 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-
 }
 
 .services-container__column {
@@ -314,6 +298,8 @@ body {
     display: flex;
 }
 
+// WORKS CONTAINER
+
 .works-container {
     display: flex;
     flex-direction: column;
@@ -325,18 +311,26 @@ body {
     flex-direction: column;
 
     &:nth-child(odd) {
+        display: flex;
         align-items: flex-start;
         text-align: start;
     }
 
     &:nth-child(even) {
-
+        display: flex;
         align-items: flex-end;
         text-align: end;
-        & > .project-header {
+
+        &>.project-header {
+            display: flex;
             justify-content: flex-end;
         }
 
+        &>.work-container__row__column {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+        }
     }
 
     &:nth-child(odd) {
@@ -387,6 +381,8 @@ body {
     background-color: #3b99e0;
 }
 
+// CONTACT FORM
+
 #contact-container {
     display: flex;
     flex-direction: column;
@@ -406,6 +402,29 @@ body {
     padding: 1.5rem;
     border-radius: .3rem;
 }
+
+.send-button {
+    display: flex;
+    justify-content: center;
+    border: 1px solid #3b99e0;
+    background-color: white;
+    color: #3b99e0;
+    font-size: 1.25rem;
+    letter-spacing: 1.5px;
+    border-radius: .3rem;
+    font-weight: 900;
+    text-transform: uppercase;
+    margin: 1rem 0;
+    width: 10rem;
+    cursor: pointer;
+}
+
+.send-button:hover {
+    background-color: #3b99e0;
+    color: white;
+}
+
+// ABOUT CONTAINER
 
 .about-container {
     display: flex;
@@ -429,6 +448,8 @@ body {
     width: 50%;
     ;
 }
+
+// FOOTER
 
 .footer {
     display: flex;
@@ -543,14 +564,13 @@ body {
             justify-content: flex-end;
             align-items: flex-end;
             text-align: end;
-& > .work-container__row__column {
-    align-items: flex-end;
-}
-            
+
+            &>.work-container__row__column {
+                align-items: flex-end;
+            }
         }
 
         &:nth-child(odd) {
-
             align-items: flex-start;
             text-align: start;
         }
@@ -573,7 +593,7 @@ body {
         flex-direction: row;
         justify-content: center;
 
-        & > * {
+        &>* {
             width: 30%;
             margin: 1rem;
         }
@@ -589,7 +609,7 @@ body {
         height: 100%;
     }
 
-    .contact-container {
+    #contact-container {
         padding: 5rem 10rem;
     }
 }
